--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-# Xcode
-#
+## macOS
+.DS_Store
+
+## Xcode
 build/
 *.pbxuser
 !default.pbxuser
@@ -16,18 +18,17 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
+*.dSYM.zip
+*.dSYM
 
-# CocoaPods
-#
-# We recommend against adding the Pods directory to your .gitignore. However
-# you should judge for yourself, the pros and cons are mentioned at:
-# http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
-#
-# Pods/
+## Other
+*.moved-aside
+*.xccheckout
+*.xcscmblueprint
 
-# Carthage
-#
-# Add this line if you want to avoid checking in source code from Carthage dependencies.
-# Carthage/Checkouts
+## CocoaPods
+Pods/
 
+## Carthage
+Carthage/Checkouts
 Carthage/Build
